Update session dates in README and fix site URL in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project information
 site_name: Statistik og Dataanalyse for Softwareteknologi
-site_url: https://rbrooksdk.github.io/STA_26
+site_url: https://rbrooksdk.github.io/STA_26/
 site_author: VIA University College
 site_description: Kursusside for Statistik og Dataanalyse for Softwareteknologi ved VIA University College
 docs_dir: .
