--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-mkdocs-material>=9.1.6
-mkdocs-glightbox>=0.3.2
-mkdocs-material-extensions
-pymdown-extensions>=1.1.1
-mkdocs-same-dir>=0.1.2
-mkdocs-git-revision-date-localized-plugin>=1.2.0
+mkdocs>=1.5,<2
+mkdocs-material>=9.1.6,<10
+mkdocs-glightbox>=0.3.2,<1
+mkdocs-material-extensions>=1,<2
+pymdown-extensions>=10,<11
+mkdocs-same-dir>=0.1.2,<1
+mkdocs-git-revision-date-localized-plugin>=1.2.0,<2
 git+https://github.com/RBrooksDK/mkdocs-quiz.git#egg=mkdocs-quiz
